gccida/c3/push_topmost_sequence
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_topmost_sequence/src/emit-rtl.c:4974:12: error: expected expression
*( _OWORD *)&v0->first = *( _OWORD *)&emit->x_first_insn; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_topmost_sequence/src/emit-rtl.c:4974:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v0->first = *( _OWORD *)&emit->x_first_insn; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_topmost_sequence/src/emit-rtl.c:4974:37: error: expected expression
*( _OWORD *)&v0->first = *( _OWORD *)&emit->x_first_insn; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_topmost_sequence/src/emit-rtl.c:4974:29: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v0->first = *( _OWORD *)&emit->x_first_insn; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_topmost_sequence/src/emit-rtl.c:4977:12: error: expected expression
*( _OWORD *)&emit->x_first_insn = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_topmost_sequence/src/emit-rtl.c:4977:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&emit->x_first_insn = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_topmost_sequence/src/emit-rtl.c:4988:12: error: expected expression
*( _OWORD *)&v3->x_first_insn = *( _OWORD *)&v6->first; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_topmost_sequence/src/emit-rtl.c:4988:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v3->x_first_insn = *( _OWORD *)&v6->first; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_topmost_sequence/src/emit-rtl.c:4988:44: error: expected expression
*( _OWORD *)&v3->x_first_insn = *( _OWORD *)&v6->first; 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_topmost_sequence/src/emit-rtl.c:4988:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v3->x_first_insn = *( _OWORD *)&v6->first; 
                                   ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_topmost_sequence/src/obj/emit-rtl.o] Error 1
